# Matrix

./: .clang-format  .gitignore  .gitmodules  CMakeBasePresets.json  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md
.github/workflows/: unit.yml
apps/: CMakeLists.txt
apps/Example/: CMakeLists.txt  main.cpp
apps/Mandelbrot/: CMakeLists.txt  ColorMap.hpp  Mandelbrot.hpp  main.cpp
cmake/presets/: CMakeBasePresets.json
src/: CMakeLists.txt  Foundation.hpp
src/Foundation/: CMakeLists.txt  Expect.hpp  Number.hpp  ThreadPool.hpp
src/Image/: CMakeLists.txt  NetPbm.hpp  PNG.hpp  PPM.hpp
src/Matrix/: CMakeLists.txt  Dispatcher.hpp  Matrix.hpp  MatrixInitializer.hpp
src/Tensor/: Arithmetic.hpp  CMakeLists.txt  Dispatch.hpp  Dispatcher.hpp  Tensor.hpp  TensorInitializer.hpp  ThreadPool.hpp
tests/: CMakeLists.txt  TestMatrix.cpp
tests/benchmark/: BenchmarkMatrix.cpp  CMakeLists.txt
tests/unit/: CMakeLists.txt  TestMatrix.cpp
